46
================

04/05/22 No longer hide the person field for TNR/Release movements 
04/05/22 Regimen edits are now audited correctly #1129
04/05/22 Fix smartquote replacement to use unicode rather than HTML entities
03/05/22 Do not allow ES01/2 log messages to be edited #1094
27/04/22 csvimport: support declawed and special needs (Peter Van Caeseele)
27/04/22 SavourLife: Fix bug with updating held status
25/04/22 csvimport: Support person image/PDF (Peter Van Caeseele) #1126
25/04/22 Allow future dates in vacc/test give dialogs again due to outcry
22/04/22 Query builder: Animal date of birth between two dates criteria
22/04/22 Animal find: filter option for heartworm negative
21/04/22 Tweak Peter's patch to split lost/found and support additional fields #648
21/04/22 Allow incident/lost/found column config (Peter Van Caeseele) #648
21/04/22 SavourLife: do not send animals without a photo
20/04/22 Option to hide looking for (Peter Van Caeseele) #1034
20/04/22 Option to email login credentials when creating a user account #362
19/04/22 wordkeys: Extra DisplayXIf tokens for entire/neutered animals
19/04/22 csvimport: fix bug where warnings were logged for blank image/pdf rows
19/04/22 Query builder: support payment records #1116
19/04/22 Datepickers disable choice of future dates in give dialogs
18/04/22 Query builder: support combined medical data #1116
18/04/22 Query builder: test for additional fields with/without value #1122
17/04/22 Updated Swedish translation (Carina Lekare)
11/04/22 move_* screens: if first lookup item was inactive it still displayed
05/04/22 All publishers: FTP photo upload uses IDs rather than medianame #1117
05/04/22 PetFinder: Fix photo urls to use IDs rather than names #1117
30/03/22 SavourLife: Support sending bonded animals
30/03/22 CSV import: Fix for merging ANIMALFLAGS
27/03/22 Fix decoding bug when using SQL Interface->Execute Script
26/03/22 Add Mozambique en/pt locales