@@ -6,8 +6,8 @@ import time
 # flake8: noqa - we have a lot of locales and this is convenient
 from asm3.locales import *
 
-VERSION = "46u [Wed  4 May 09:09:42 BST 2022]"
-BUILD = "05040909"
+VERSION = "46u [Thu  5 May 10:52:18 BST 2022]"
+BUILD = "05051052"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
